# cpp-lib

./: .gitignore  CMakeLists.txt  Config.cmake  libraries.cmake
boost/boost/atomic/detail/: gcc-atomic.hpp
boost/boost/thread/pthread/: thread_data.hpp
enoki/: fwd.h
glfw/darwin/lib64/lib/cmake/glfw3/: glfw3Targets.cmake
glfw/darwin/lib64/lib/pkgconfig/: glfw3.pc
intel/include/librealsense/: rs.hpp
kinect/macos/include/libfreenect2/: config.h
kinect/windows/include/libfreenect2/: export.h
kinect/windows/lib/x64/: freenect2.lib
opencv/darwin/lib64/include/opencv2/: cvconfig.h  opencv_modules.hpp
opencv/darwin/lib64/include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
opencv/darwin/lib64/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
opencv/darwin/lib64/lib/pkgconfig/: opencv.pc
opencv/darwin/lib64/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
opencv/windows/x64/include/opencv2/: cvconfig.h  opencv_modules.hpp
opencv/windows/x64/x64/vc12/staticlib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-minsizerel.cmake  OpenCVModules-release.cmake  OpenCVModules-relwithdebinfo.cmake  OpenCVModules.cmake  libjasper.lib  libjasperd.lib  libjpeg.lib  libjpegd.lib  libpng.lib  libpngd.lib  libtiff.lib  libtiffd.lib  libwebp.lib  libwebpd.lib  opencv_aruco320.lib  opencv_bgsegm320.lib  opencv_bgsegm320d.lib  opencv_highgui320.lib  opencv_highgui320d.lib  opencv_imgcodecs320.lib  opencv_line_descriptor320.lib  opencv_optflow320.lib  opencv_photo320.lib  opencv_plot320.lib  opencv_plot320d.lib  opencv_reg320.lib  opencv_reg320d.lib  opencv_shape320.lib  opencv_stereo320.lib  opencv_stereo320d.lib  opencv_superres320.lib  opencv_superres320d.lib  opencv_video320.lib  opencv_videoio320.lib  opencv_videoio320d.lib  opencv_videostab320.lib  zlib.lib  zlibd.lib
